[tool.poetry]
name = "ngridcollector"
version = "0.1.0"
description = ""
authors = ["bengabp <bengabdev4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
beanie = "^1.27.0"
fastapi = {extras = ["all"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
